tests/paczka1/fuzzy1/11264696.err
Error in line 2: A869 A284 79,6
Error in line 7: A869 A869 54,7
Error in line 17: ow8dcGo S737 95,8
